--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 
         <div class="row">
             <div class="testimonials-col">
-                <img src="images/user1.jpg">
+                <img src="images/Belyn (1).jpeg">
                 <div>
                     <p>
                         It  has been an awesome experience learning from the world's famous univeristy.
@@ -160,7 +160,7 @@
                 </div>
             </div>
             <div class="testimonials-col">
-                <img src="images/user2.jpg">
+                <img src="images/Desmond.jpeg">
                 <div>
                     <p>
                         It  has been an awesome experience learning from the world's famous univeristy.
